# kitti_evaluate

./: .gitignore  README.md
kitti_evaluate/: CMakeLists.txt
kitti_evaluate/include/: mail.h  matrix.h
kitti_evaluate/src/: evaluate_odometry.cpp  matrix.cpp
results/errors/: 15.txt
results/plot_error/: 11_rl.eps  11_rs.eps  11_tl.eps  11_ts.eps  12_rl.eps  12_rs.eps  12_tl.eps  12_ts.eps  13_rl.eps  13_rs.eps  13_tl.eps  13_ts.eps  14_rl.eps  14_rs.eps  14_tl.eps  14_ts.eps  15_rl.eps  15_rs.eps  15_tl.eps  15_ts.eps  avg_rl.eps  avg_rs.eps  avg_tl.eps  avg_ts.eps
results/plot_path/: 11.eps  11.gp  12.eps  12.gp  13.eps  14.eps  14.gp  15.eps  15.txt
